fixing item alignment in dashboard

--- a/apps/products_app/static/products_app/css/style.css
+++ b/apps/products_app/static/products_app/css/style.css
@@ -29,7 +29,8 @@
 
 .item{
   display: inline-block;
-  /* width: 100%; */
+  width: 100%; 
+  height: 100%;
   /* margin-right: 30px;
   margin-bottom: 30px; */
   vertical-align: top;
